# miniKanren_exec_order

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  appendo1.kotlin.t  appendo1.ml.t  appendo1.rkt.t  appendo2.kotlin.t  appendo2.ml.t  appendo2.rkt.t  conjunction.ml.t  dune  expo1.kotlin.t  expo1.ml.t  expo1.rkt.t  expo2.kotlin.t  expo2.ml.t  expo3.kotlin.t  expo3.ml.t  expo4.kotlin.t  expo4.ml.t  expo5.kotlin.t  expo5.ml.t  expo5.rkt.t  logo1.kotlin.t  logo1.ml.t  mulo1.kotlin.t  mulo1.ml.t  mulo1.rkt.t  numero1.ml.t  numero2.ml.t  odd_mulo1.kotlin.t  odd_mulo1.ml.t  perm1.ml.t  perm2.ml.t  quines.ml.t  repeatedMulo1.kotlin.t  repeatedMulo1.ml.t  reverso.kotlin.t  (+11 more)
.github/workflows/: master.yml
klogic/: build.gradle.kts  dune
klogic-with-context/klogic-benchmarks/src/jmh/kotlin/org/klogic/benchmarks/: AbstractKlogicBenchmark.kt  ExponentBenchmark.kt  LogarithmBenchmark.kt  MultiplicationBenchmark.kt  QuinesBenchmark.kt  SmallExponentBenchmark.kt  SmallMultiplicationBenchmark.kt  SortingBenchmark.kt  ThrinesBenchmark.kt  TwinesBenchmark.kt
klogic/src/test/kotlin/: AppendoTest.kt  ExportedNumbersTest.kt  OlegNumbersTest.kt  QuinesTest.kt  ReversoTest.kt  TestRunner.kt
klogic/src/test/kotlin/utils/: ExportedOlegLogicNumbers.kt  OlegLogicNumbers.kt  Utils.kt
ocaml/: appendo.ml  appendo.t  dune  dune-project  numero.ml  numero_decls.ml  numero_decls_test.ml  perm.ml  quines.ml  reverso.ml  reverso.t  reverso_trace.ml  run_scheme.ml  scheme_ast.ml  scheme_interpret.ml
ocaml/bench/: Makefile  all_benchmakrs.ml  all_benchmarks.ml  dune  expo_bench.ml  logo_bench.ml  numero_bench.ml  permo_bench.ml  quines_bench.ml  twines_bench.ml
ocaml/hack/: dune  hack_appendo.ml  hack_numero.ml  numero_decls_hack.ml
ocaml/hack/fresh/: ppx_fresh.ml
ocaml_ext2/: .ocamlformat  dune  hack_numero.ml  numero_decls_hack.ml
ocaml_ext2/fresh/: ppx_fresh.ml
racket/: appendo.rkt  appendo2.rkt  debug_stuff.rkt  mk.rkt  mulo1.rkt  numbers.rkt  numbers_debug.rkt  quines.rkt  reverso.rkt  run_quines.rkt
racket/bench/: Makefile  numero_bench.rkt  quines_bench.rkt  quines_demo.rkt
scheme/: .gitignore  Makefile  footer.scm  header.scm  test.scm  test2.scm
unif_count/: dune  kotlin.t  kotlin_gen.t  ocaml.t  ocaml_ext2.t  ocaml_hack.t  racket.t
unif_traces/kotlin/: appendo1.kotlin.t  appendo2.kotlin.t  expo1x2.t  expo2x1.t  expo2x2.t  expo2x3.t  expo5.kotlin.t  logo1.kotlin.t  logo8x2.t  mulo1.kotlin.t  mulo3x3.t  mulo5x5.t  odd_mulo1.kotlin.t  repeatedMulo1.kotlin.t  reverso.kotlin.t  reverso2.kotlin.t
unif_traces/ocaml/: dune  expo2x3.ml.t  logo1.ml.t  logo8base2.ml.t  mulo3x3.hack.t  mulo3x3.ml.t  mulo5x5.ml.t  quine1.t
unif_traces/racket/: dune  expo2x3.rkt.t  expo3x2.rkt.t  logo8base2.rkt.t  mul3x3.rkt.t  mul5x5.rkt.t  quine1.t
