(cram
 (deps
  racket/appendo.rkt
  racket/appendo2.rkt
  racket/debug_stuff.rkt
  racket/mk.rkt))

(cram
 (deps faster-miniKanren/private-unstable.rkt faster-miniKanren/mk.scm))

(cram
 (deps
  ocaml/appendo.exe
  ocaml/reverso.exe
  ocaml/quines.exe
  ocaml/twines.exe
  ocaml/thrines.exe
  ocaml/conjunction.exe
  ;
  ))

(cram
 (deps
  ; klogic/gradle/wrapper/gradle-wrapper.jar
  ; klogic/gradle/wrapper/gradle-wrapper.properties
  ; klogic/src/test/kotlin/utils/Utils.kt
  ; klogic/src/test/kotlin/AppendoTest.kt
  ; klogic/src/test/kotlin/ReversoTest.kt
  ; klogic/build.gradle.kts
  ; klogic/gradlew
  ; klogic/settings.gradle.kts
  klogic/klogic.jar
  ;klogic/.gradle
  ;klogic/build
  ))

; It would be great to specify cram dependecies here, but...
;(alias
; (name trace-tests)
; (deps @appendo1.kotlin @appendo2.kotlin @reverso.kotlin))
