(cram
 (deps
  racket/appendo.rkt
  racket/appendo2.rkt
  racket/reverso.rkt
  racket/reverso2.rkt
  racket/reverso3.rkt
  racket/reverso4.rkt
  racket/mulo1.rkt
  racket/expo5.rkt
  racket/debug_stuff.rkt
  racket/numbers.rkt
  ;racket/numbers.scm
  racket/mk.rkt))

(cram
 (deps faster-miniKanren/private-unstable.rkt faster-miniKanren/mk.scm))

(cram
 (deps
  ocaml/appendo.exe
  ocaml/reverso.exe
  ocaml/numero.exe
  ocaml/quines.exe
  ocaml/twines.exe
  ocaml/thrines.exe
  ocaml/conjunction.exe
  ocaml/perm.exe
  ;
  ))

(cram
 (deps
  klogic/klogic.jar
  ;
  ))

; It would be great to specify cram dependecies here, but...
;(alias
; (name trace-tests)
; (deps @appendo1.kotlin @appendo2.kotlin @reverso.kotlin))
