(rule
 (targets klogic.jar)
 (deps
  ./gradlew
  ./gradle/wrapper/gradle-wrapper.jar
  ./gradle/wrapper/gradle-wrapper.properties
  ./dune
  ./README.md
  ./build.gradle.kts
  ./settings.gradle.kts
  ./src/test/kotlin/TestRunner.kt
  ; ./src/test/kotlin/ReversoTest.kt
  ; ./src/test/kotlin/AppendoTest.kt
  ./src/test/kotlin/OlegNumbersTest.kt
  ./src/test/kotlin/QuinesTest.kt
  ; ./src/test/kotlin/ExportedNumbersTest.kt
  ; ./src/test/kotlin/utils/Utils.kt
  ; ./src/test/kotlin/utils/LogicInt.kt
  ; ./src/test/kotlin/utils/OlegLogicNumbers.kt
  ; ./src/test/kotlin/utils/ExportedOlegLogicNumbers.kt
  ./gradlew.bat
  ;
  )
 ; dune doesn't allow to build files out of current directory, so we need extra copying
 (action
  (run
   sh
   -c
   "sh ./gradlew shadowJar --no-daemon && cp build/libs/klogic.jar . ")))

(cram
 (deps klogic.jar))
