(library
 (name counters)
 (modules counters)
 (wrapped false))

(executables
 (names reverso appendo conjunction)
 (modules reverso appendo conjunction)
 (libraries OCanren counters)
 (flags
  (:standard
   -rectypes
   ;-dsource
   ))
 (preprocess
  (pps OCanren-ppx.ppx_fresh GT.ppx_all OCanren-ppx.ppx_distrib)))

(library
 (name scheme_interpret)
 (modules scheme_interpret)
 (libraries OCanren counters)
 (flags
  (:standard -rectypes))
 (preprocessor_deps %{project_root}/bench/pp5+dump.exe)
 (preprocess
  (pps
   OCanren-ppx.ppx_fresh
   GT.ppx_all
   OCanren-ppx.ppx_distrib
   ppx_optcomp
   --
   -pp
   "ocaml/bench/pp5+dump.exe -D TRACE")))

(executables
 (names quines twines thrines)
 (modules quines twines thrines)
 (libraries OCanren scheme_interpret)
 (flags
  (:standard -rectypes))
 (preprocess
  (pps OCanren-ppx.ppx_fresh GT.ppx_all OCanren-ppx.ppx_distrib)))

(cram
 (deps
  conjunction.exe
  appendo.exe
  reverso.exe
  rewriter.exe
  quines.exe
  twines.exe
  thrines.exe
  ;
  ))

(executable
 (name rewriter)
 (modules rewriter)
 (flags
  (:standard -linkall))
 (libraries
  OCanren-ppx.ppx_fresh
  GT.ppx_all
  OCanren-ppx.ppx_distrib
  ppxlib.runner))
