(cram
 (applies_to ocaml_ext2)
 (deps ../ocaml_ext2/hack_numero.exe))

(cram
 (applies_to ocaml)
 (deps ../ocaml/numero.exe ../ocaml/run_scheme.exe))

(cram
 (applies_to kotlin_gen kotlin)
 (deps
  ../klogic/klogic.jar
  ;
  ))

(cram
 (applies_to racket)
 (deps
  %{project_root}/racket/appendo.rkt
  %{project_root}/racket/reverso.rkt
  %{project_root}/racket/reverso2.rkt
  %{project_root}/racket/reverso3.rkt
  %{project_root}/racket/reverso4.rkt
  %{project_root}/racket/mulo1.rkt
  %{project_root}/racket/expo5.rkt
  %{project_root}/racket/debug_stuff.rkt
  %{project_root}/racket/numbers.rkt
  %{project_root}/racket/mk.rkt
  %{project_root}/faster-miniKanren/private-unstable.rkt
  %{project_root}/faster-miniKanren/mk.scm
  ;
  ))
