(library
 (name scheme_interpret_nolog)
 (modules scheme_interpret_nolog)
 (libraries OCanren counters)
 (wrapped false)
 (flags
  (:standard -rectypes))
 (preprocessor_deps %{project_root}/bench/pp5+dump.exe)
 (preprocess
  (pps
   OCanren-ppx.ppx_fresh
   GT.ppx_all
   OCanren-ppx.ppx_distrib
   ppx_optcomp
   --
   -pp
   ocaml/bench/pp5+dump.exe)))

(executables
 (names quines_bench twines_bench thrines_bench)
 (modules quines_bench twines_bench thrines_bench)
 (flags
  (:standard -rectypes))
 (libraries benchmark scheme_interpret_nolog))

(cram
 (deps ./quines_bench.exe twines_bench ./thrines_bench.exe))

(rule
 (targets pp5+dump.exe)
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_dump
   -o
   %{targets})))
